<resources>
    <string name="app_name">Runtrack</string>
    <string name="app_about">Runtrack is an UDC-APM project. More info: https://github.com/danibranas/runtrack</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="app_no_permissions">App needs permissions to properly work. Please check it has permissions.</string>

    <string name="sign_out_confirm">Are you sure?</string>
    <string name="add_event_title">Add event</string>
    <string name="add_event_by_id">Insert event ID</string>
    <string name="add_event_by_qr">Scan event QR</string>

    <string name="events_tab_near_events">Near events</string>
    <string name="events_tab_my_events">Upcoming</string>
    <string name="events_tab_records">Me</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="menu_events">Events</string>
    <string name="menu_add_event">Add event</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_about">About</string>

    <string name="event_join_button">Join event</string>
    <string name="event_start_button">Start event!</string>
    <string name="event_joined">Event joined!</string>
    <string name="events_no_events">There are not events here. Join some event and run!</string>
    <string name="events_no_near_events">There are not near events :(</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last locationEntity update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The locationEntity settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="view_event">View event</string>
    <string name="request_location_updates">Request locationEntity updates</string>
    <string name="remove_location_updates">Remove locationEntity updates</string>
    <string name="ok">OK</string>

    <string name="tracking_stop_question">Stop event tracking?</string>
    <string name="stop">Stop</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="search_event">Search event</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="eula_title">Conditions of use</string>
    <string name="eula_agree">I agree</string>
    <string name="eula_disagree">Don\'t agree</string>
    <string name="eula_content">Please read this Conditions of use ("Agreement") carefully before clicking the "I Agree" button, downloading or using Runtrack ("Application").
\nBy clicking the "I Agree" button, downloading or using the Application, you are agreeing to be bound by the terms and conditions of this Agreement.
\n\nIf you do not agree to the terms of this Agreement, do not click on the "I Agree" button and do not download or use the Application.

\n\nLicense

\n\nRuntrack grants you a revocable, non-exclusive, non-transferable, limited license to download, install and use the Application solely for your personal, non-commercial purposes strictly in accordance with the terms of this Agreement.

\n\nRestrictions

\n\nYou agree not to, and you will not permit others to:

\n\na) license, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose or otherwise commercially exploit the Application or make the Application available to any third party.

\n\nThe Restrictions section is for applying certain restrictions on the app usage, e.g. user can\'t sell app, user can\'t distribute the app. For the full disclosure section, create your own EULA.

\n\nModifications to Application

\n\nRuntrack reserves the right to modify, suspend or discontinue, temporarily or permanently, the Application or any service to which it connects, with or without notice and without liability to you.

\n\nThe Modifications to Application section is for apps that will be updated or regularly maintained. For the full disclosure section, create your own EULA.

\n\nTerm and Termination

\n\nThis Agreement shall remain in effect until terminated by you or Runtrack.

\n\nRuntrack may, in its sole discretion, at any time and for any or no reason, suspend or terminate this Agreement with or without prior notice.

\n\nThis Agreement will terminate immediately, without prior notice from Runtrack, in the event that you fail to comply with any provision of this Agreement. You may also terminate this Agreement by deleting the Application and all copies thereof from your mobile device or from your desktop.

\n\nUpon termination of this Agreement, you shall cease all use of the Application and delete all copies of the Application from your mobile device or from your desktop.

\n\nSeverability

\n\nIf any provision of this Agreement is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the remaining provisions will continue in full force and effect.

\n\nAmendments to this Agreement

\n\nRuntrack reserves the right, at its sole discretion, to modify or replace this Agreement at any time. If a revision is material we will provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.

\n\nContact Information

\n\nIf you have any questions about this Agreement, please contact us.
</string>
    <string name="event_distance">Distance</string>
    <string name="event_start_date">Starts</string>
    <string name="event_prize">Prize</string>
    <string name="event_prize_format">%d €</string>
    <string name="event_map_preview_desc">Event Map Preview</string>
    <string name="nav_account_image_desc">Account image</string>
    <string name="app_slogan">following your results</string>
    <string name="button_sign_in">Sign In</string>
    <string name="event_inscribed">inscribed</string>
    <string name="pace_measure_minkm">min/km</string>
    <string name="distance_measure_km">km</string>
    <string name="event_description_title">Description</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="event_people_number">%d inscribed</string>
    <string name="speed_title">Speed</string>
    <string name="event_time">Time</string>
    <string name="event_pace">Pace</string>
    <string name="event_avg_speed">Avg speed</string>
    <string name="loading">Loading...</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_message">Are you sure you want to clear database? This action cannot be undone</string>
</resources>
