<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events"
            android:icon="@drawable/ic_run" />
        <item
            android:id="@+id/nav_add_event"
            android:title="@string/menu_add_event"
            android:icon="@drawable/ic_plus_circle_icon" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings_icon" />
        <item
            android:id="@+id/nav_rate_us"
            android:title="@string/menu_rate_us"
            android:icon="@drawable/ic_star_icon" />
        <item
            android:id="@+id/nav_diagnostics"
            android:title="@string/menu_diagnostics"
            android:icon="@drawable/ic_menu_manage" />
        <item
            android:id="@+id/nav_clear_db"
            android:title="@string/clear_database"
            android:icon="@drawable/ic_cancel" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:checkable="false"
            android:id="@+id/nav_sign_out"
            android:title="@string/menu_sign_out"
            android:icon="@drawable/ic_exit_icon" />
    </group>

</menu>
