<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.EventDetailsActivity"
    android:layout_height="match_parent">

    <!-- Time, avg, pace -->
    <LinearLayout
        android:id="@+id/stats_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_time"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="00:30:02"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_avg_speed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_avg_speed"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_avg_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="15.03 km/h"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/event_pace_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_pace"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_pace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="4:45 min/km"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <!-- Speed graph -->
    <TextView
        android:id="@+id/speed_graph_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/speed_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_linearLayout" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/speed_graph"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_graph_title" />
</android.support.constraint.ConstraintLayout>