<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.EventDetailsActivity">

    <ImageView
        android:id="@+id/icon_event_title"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:src="@drawable/ic_run"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/event_title"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="Race title"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_event_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/event_map_preview"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_distance_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_distance"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="7.10 km"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_hour_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_start_date"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="10:30"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/event_prize_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/event_prize"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/event_prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="1000€"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/event_map_preview"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/event_map_preview_desc"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/people_text"
        app:srcCompat="@drawable/map_example" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:minHeight="202dp"
        app:layout_constraintStart_toStartOf="@+id/event_map_preview"
        app:layout_constraintTop_toTopOf="@+id/event_map_preview">

        <TextView
            android:id="@+id/event_date_day"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:padding="10dp"
            android:text="12"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/event_date_month"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:padding="10dp"
            android:text="ene"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/event_date_day"
            tools:ignore="HardcodedText" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/icon_people"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:src="@drawable/ic_people_outline"
        app:layout_constraintBottom_toTopOf="@+id/event_map_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_event_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/people_text"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="10 inscritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon_people"
        app:layout_constraintTop_toBottomOf="@+id/event_title"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/join_event_button"
        android:visibility="gone"
        style="@style/Theme.Design"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_width="363dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/event_join_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>